kanc/src/tests/sample_code/should_fail/single_file/bind/duplicate_variants.k
type U {
    .f: U,
    .f: U,
}
